--- a/style.css
+++ b/style.css
@@ -1,26 +1,92 @@
 .pcr-app[data-theme='classic'] .pcr-selection .pcr-color-preview {
     display: none !important;
+    align-items: center;
+    justify-content: center;
 }
 
-.pcr-app {
+.pcr-app[data-theme='nano'] {
+    left: 100%;
+    width: 90%;
+    height: 419px;
+    min-width: 300px;
+    max-width: 337px;
+    left: 0px !important;
+    position: absolute;
     visibility: visible !important;
     opacity: 1 !important;
     box-shadow: 0 0 0 !important;
+    transform: translateX(20%);
 }
+
+.pcr-color-palette {
+    position: relative;
+    width: 337px !important;
+    height: 265px !important;
+}
+
+/* Input hex code color picker */
+.pcr-app[data-theme='nano'] .pcr-interaction input {
+    right: 0px;
+    bottom: 50px;
+    width: 100%;
+    min-width: 250px;
+    max-width: 250px;
+    height: 55px;
+    position: absolute;
+    background: #F2F4F5;
+    border-radius: 5px;
+    border-left: solid 20px #F2F4F5;
+}
+
+/* Color Hex Text */
+.pcr-interaction::after {
+    left: 0px;
+    bottom: 70px;
+    content: 'Color Hex';
+    position: absolute;
+    width: 57px;
+    height: 18px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #16213E;
+    z-index: 9999;
+}
+
 
 .pcr-color-opacity {
     display: none !important;
 }
-/* .pcr-color-chooser {
-    top: 80px;
-    left: -140px;
-    transform: rotate(90deg);
-} */
+
+.pcr-color-chooser {
+    left: -24%;
+    width: 337px;
+    height: 13.6px;
+    border-radius: 0px !important;
+}
+
+.pcr-hue {
+    border-radius: 0px !important;
+}
 
 .pcr-app[data-theme='classic'] .pcr-selection .pcr-color-chooser .pcr-slider {
     height: 200px;
 }
 
+.pcr-color-preview,
+.pickr {
+    display: none !important;
+}
+
+/* Change color range */
+.pcr-app[data-theme='nano'] .pcr-selection .pcr-color-chooser .pcr-slider {
+    width: 100%;
+    height: 13.6px;
+    max-width: 337px;
+    min-width: 200px;
+}
 
 .pcr-result {
     max-width: 200px;
